# pns

./: .env.anvil  .gitignore  ARCHITECTURE.md  AUDIT_FINDINGS.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_SETUP.md  CONTRACT_ADDRESS_FIX.md  EC2_DEPLOYMENT.md  FRONTEND_INTEGRATION.md  GETTING_STARTED.md  INTEGRATION_MAPPING.md  MAINNET_DEPLOYMENT_SUMMARY.md  PRODUCTION_CHECKLIST.md  PRODUCTION_GUIDE.md  Prod.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SOLANA_LOCAL_TESTING.md  instructions.md  setup.sh  start-local-all.sh  startup.md  test-anvil.sh
backend/: .dockerignore  .env.backup  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CHUNKED_LOGS_SUMMARY.md  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INDEXER_GUIDE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  init-db.sql  logs-docker.sh  package.json  restart-docker.sh  start-anvil.sh  start-docker.sh  stop-docker.sh
client/: .env.example  DAIMO_INTEGRATION.md  DAIMO_SETUP.md  DAIMO_SUMMARY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
contracts/: .env.deployment  ANVIL_QUICK_REFERENCE.md  ANVIL_TESTING.sh  DEPLOYMENT_STEPS.md  MAINNET_DEPLOYMENT_GUIDE.md  QUICK_TEST_GUIDE.md  TESTING_COMMANDS.md  TESTING_GUIDE.md  USDC_INTEGRATION_SUMMARY.md  USDC_MIGRATION_GUIDE.md  check_roles.sh  deploy-amoy.sh  deploy-complete.sh  deploy-marketplace.sh  deploy-mumbai.sh  deploy-resolver.sh  deploy.sh  foundry.toml  test-commands.sh  (+2 more)
solana/programs/pns_anchor/: Cargo.toml
solana/programs/pns_anchor/src/: lib.rs
(+105 files in other folders)
