[package]
name = "pns_anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
metaplex-token-metadata = { version = "3.1.1", features = ["no-entrypoint"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
